ci: test only when changes on relevant folders

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,10 @@ name: Run Tests
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - trusted_library/**
+      - openapi/**
+      - src/**
   pull_request:
     branches: [ "main" ]
 
