--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ local
 
 **/lcaac-tmp.yaml
 **/application-tmp.yaml
-perfanalysis/.ipynb_checkpoints
+**/.venv
+experiments/performance/.ipynb_checkpoints
