--- a/trusted_library/lcaac.yaml
+++ b/trusted_library/lcaac.yaml
@@ -10,5 +10,4 @@ connectors:
     cache:
       enabled: true
     options:
-      directory: test-data/data
-#      directory: data
+      directory: data
