demo: jupyter notebook

--- a/trusted_library/lcaac.yaml
+++ b/trusted_library/lcaac.yaml
@@ -10,4 +10,5 @@ connectors:
     cache:
       enabled: true
     options:
-      directory: data
+#      directory: data
+      directory: test-data
