--- a/charts/cloud-assess/values.yaml
+++ b/charts/cloud-assess/values.yaml
@@ -7,8 +7,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-#  repository: ghcr.io/kleis-technology/cloud-assess/cloud-assess-app
-  repository: cloud-assess
+  repository: ghcr.io/kleis-technology/cloud-assess/cloud-assess-app
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
